AM_CPPFLAGS = \
 -I$(top_srcdir)/$(NODE_PATH)/src \
 -I$(top_srcdir)/$(NODE_PATH)/src/support \
 -I$(top_srcdir)/$(SECP256K1_PATH)/include \
 -I$(top_srcdir)/contrib/cex \
 -I$(top_srcdir)/contrib/cli11 \
 -I$(top_srcdir)/src/common \
 -I$(top_srcdir)/src/api \
 -I$(top_srcdir)/src/tools


noinst_LTLIBRARIES = libl15-tools.la
libl15_tools_la_SOURCES = \
	config.cpp nodehelper.cpp
